src/App.css
/* ... */
.Price_wrap a {
  margin: 0px;
  background-image: linear-gradient(22deg,#0ca6bb,#0e9aad 18%,#359db9 30%,#59a0c5 47%,#7296c9 72%,rgba(141,122,218,.81)),linear-gradient(180deg,#049cb0,#049cb0);
  background-position: 0 0,0 0;
  display: inline-block;
  color: #fff;
  font-family: 'Calibri', sans-serif;
  font-size: 22px;
  padding: 11px 28px;
  line-height: normal;
  min-width: 314px;
  margin-bottom: 16px;
  border-radius: 5px; text-decoration: none;
}


.Price_wrap {
  border-bottom: 2px solid #109bae;
  margin-top: 34px;
  padding-bottom: 12px;
}
.Price_wrap:last-child {
  padding-bottom: 40px;
}

.Price_wrap a {
  display: inline-block;
  margin-right: 25px;
  vertical-align: middle;
}

.Price_wrap p {
  font-family: 'Calibri', sans-serif;
  font-size: 19px;
  font-weight: 400;
  line-height: 30px;
  display: inline-block;
  vertical-align: middle;
  width: 64%;
}

.home_contact {
  padding: 30px 0px;
  text-align: center;
}

.home_contact h4 {
  font-family: 'Calibri', sans-serif;
  font-size: 24px;
  margin: 0px;
  margin-bottom: 25px;
}
.main_banner .banner_right img.header-image-icon {
  opacity: .7;
}
.home_contact a {
  margin: 0px;
  background-image: linear-gradient(22deg,#0ca6bb,#0e9aad 18%,#359db9 30%,#59a0c5 47%,#7296c9 72%,rgba(141,122,218,.81)),linear-gradient(180deg,#049cb0,#049cb0);
  background-position: 0 0,0 0;
  display: inline-block;
  color: #fff;
  font-family: 'Calibri', sans-serif;
  font-size: 22px;
  padding: 11px 126px;
  line-height: normal;
  margin-bottom: 16px;
  border-radius: 5px;
  text-decoration: none;
}

.Product_wrap ul li .prod_inner span img {
  display: inline-block;
  width: 58%;
  vertical-align: middle;
}

.Product_wrap ul li .prod_inner h3 {color: #1a9bb0;font-family: 'Calibri', sans-serif;font-size: 22px;margin: 0px;margin-bottom: 3px;margin-top: 6px;line-height: normal;}

.Product_wrap ul li .prod_inner p {
  font-family: 'Calibri', sans-serif;
  font-size: 16px;
  color: #7d7d7d;
  font-weight: 400;
}

.team_wrap {
  padding-top: 24px;
}

.team_wrap h3 {
  margin: 0px;
  font-family: 'Calibri', sans-serif;
  font-weight: bold;
  font-size: 28px;
  color: #0f9aad;
  margin-bottom: 40px;
  display: inline-block;
  border-bottom: 3px solid #0e9db0;
  padding-right: 31px;
  padding-bottom: 5px;
}

.team_wrap ul li {
  width: 33%;
  float: left;
  box-sizing: border-box;
  padding: 0px 15px;
}

.team_wrap ul li .inners {
  padding: 40px 20px;
  text-align: center;
  background: rgba(249, 249, 249, 0.68);
  border-radius: 7px;
  margin-bottom: 30px;
}

.Product_wrap ul li .prod_inner span {
  border: 3px solid #fff;
}

.team_wrap ul li .inners figure {
  display: inline-block;
  border: 2px solid #0d9caf;
  border-radius: 5px;
  -webkit-transition-duration: 0.3s;
  -o-transition-duration: 0.3s;
  transition-duration: 0.3s;
  margin-bottom: 25px;
}

.team_wrap ul li .inners figure img {
  border: 2px solid #7284d0;
  margin: 3px;
  border-radius: 5px;
}

.team_wrap ul li .inners:hover figure {
  box-shadow: 0px 0px 21px -4px #0e9eb1;
}

.team_wrap ul li .inners h4 {
  color: #0e9eb1;
  font-weight: bold;
  font-family: 'Calibri', sans-serif;
  margin: 0px;
  font-size: 20px;
}

.team_wrap ul li .inners p {
  font-family: 'Calibri', sans-serif;
  margin: 0px;
  font-size: 18px;
  font-weight: 400;
  color: #3e3d3d;
}

.team_wrap {
  padding-bottom: 30px;
}


img.earth {animation-name: spin;
  animation-duration: 50000ms;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}
@keyframes spin {
  from {transform:rotate(0deg);}
  to {transform:rotate(360deg);}
}

.footer img {
  width: 170px;
  margin: -10px auto 50px;
  display: block;
}
.footer img {
  width: 170px;
  margin: -10px auto 50px;
  display: block;
}

.Product_wrap ul li .prod_inner {
  -webkit-transform: translate(0,0);
  -ms-transform: translate(0,0);
  transform: translate(0,0);
  -webkit-transition: -webkit-transform .3s ease-in-out;
  transition: -webkit-transform .3s ease-in-out;
  transition: transform .3s ease-in-out;
  transition: transform .3s ease-in-out,-webkit-transform .3s ease-in-out;
  margin-bottom: 40px;
}

.Product_wrap ul li .prod_inner:hover {
  border-width: 1px;
  border-color: #049cb0;
  box-shadow: 0 10px 19px -7px #4b6b70;
  -webkit-transform: translate(0,-10px);
  transform: translate(0,-10px);
  background: rgba(57, 157, 186, 0.05);
}

.Product_wrap .container > p {
  margin-bottom: 50px;
}
.main_banner .banner_left img.earth {
  position: absolute;
  top: -123px;
  left: -56px;
  opacity: .3;
  width: 68%;
}

.main_banner .banner_left {
  position: relative;
}

.main_banner h1 {
  position: relative;
  font-size: 43px;
  margin-bottom: 15px;
  width: 400px;
  margin-top: 0px;
}
.main_banner p {
  font-family: 'Calibri', sans-serif;
  font-size: 20px;
  font-weight: 400;
  line-height: 34px;
  position: relative;
  width: 400px;
  margin-top: 0px;
}
.main_banner .banner_right img.main_img {
  width: 387px;
  margin-top: -56px;
}

.main_banner .banner_right .header-image {
  text-align: right;
  position: relative;
}

.main_banner .banner_right img.header-image-icon {
  position: absolute;
}
.main_banner .banner_right .header-image:hover {transform: scale(1.06);}

.main_banner .banner_right .header-image {
    -webkit-transition-duration: 0.3s;
    -o-transition-duration: 0.3s;
    transition-duration: 0.3s;
}

.main_banner .banner_right .header-image:hover img.header-image-icon {
    animation: jumping 1s linear 0s infinite alternate;
}
.main_banner .banner_right {
  position: relative;
  z-index: 999999;
}

.main_banner .banner_right img.header-image-icon.left-icon {
  top: -22px;
  right: 267px;
  width: 69px;
}

.main_banner .banner_right img.header-image-icon.right-icon {
  top: -29px;
  right: 58px;
  width: 59px;
}

.main_banner .banner_right img.header-image-icon.top-icon {
  top: 131px;
  width: 66px;
  right: 23px;
}
/* ... */

